@@ -220,7 +220,7 @@ LZMADecode(TIFF* tif, uint8* op, tmsize_t occ, uint16 s)
 		return 0;
 	}
 
-        tif->tif_rawcp = sp->stream.next_in;
+        tif->tif_rawcp = (uint8 *)sp->stream.next_in; /* cast away const */
         tif->tif_rawcc = sp->stream.avail_in;
         
 	return 1;
