@@ -1,3 +1,7 @@
+2011-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* libtiff 4.0.0 released.
+
 2011-12-08  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_dirread.c, libtiff/tif_read.c: more cautious checking
